--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
    <p>Git + gitHub</p>
+   <h2>Hello</h2>
+   <p>Lorem nostrum voluptatibus dolorem, incidunt illo? Excepturi, nisi alias? Ullam tenetur quia voluptatum animi quasi cupiditate laborum omnis!</p>
 </body>
 </html>
