--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
    <p>Git + gitHub</p>
    <h2>Hello</h2>
+   <h3>Мой первый репозиторий</h3>
    <p>Lorem nostrum voluptatibus dolorem, incidunt illo? Excepturi, nisi alias? Ullam tenetur quia voluptatum animi quasi cupiditate laborum omnis!</p>
 </body>
 </html>
